# app/Models/Account.php
@@ -8,4 +8,11 @@ use Illuminate\Database\Eloquent\Model;
 class Account extends Model
 {
     use HasFactory;
+
+    protected $fillable = [
+        'user_id',
+        'balance',
+        'type',
+        'currency'
+    ];
 }
